done popular motocycle

--- a/src/components/Popular/Popular.css
+++ b/src/components/Popular/Popular.css
@@ -9,8 +9,10 @@
 .popular-item{
     display: flex;
     flex-wrap: wrap;
-    width: 80%;
+    width: 60%;
     justify-content: space-between;
+    margin-top: 50px;
+    gap: 30px;
 }
 .popular h1{
     counter-reset: #171717;
