--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,32 +1,53 @@
 .item{
-    width: 450px;
+    width: 400px;
     flex: 1;
-    display: flex;
-    flex-direction: column; 
-    border: 1px solid;
-    box-shadow: #374151;
-    border-radius: 10px; 
-    padding: 10px;
+    display: flex;  
+    flex-direction: column;
+    border: 1px solid #cdcccc;
+    box-shadow: 1px 1px 5px #979595;
+    cursor: pointer;
 }
+.item_description{
+    display: block;
+    position: relative;
+    width: auto;
+    height: auto;
+    padding: 18px;
+}
+
 
 .item p{
     margin: 6px 0px;
+
 }
 .item-price{
     display: flex;
     gap: 20px;
 }
+.item_name{
+    white-space: wrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 22px;
+    font-weight: 600;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+.item_name:hover{
+    color: #FED251;
+    transition: 0.3s;
+}
+
 .item-price-bike{
-    color: #374151;
-    font-size: 35px;
+    color: #FED251;
+    font-size: 30px;
     font-weight: 600;
 }
 .item img{
     flex: 1;
     display: flex;
     align-items: center;
-    width: 80%;
-    height: 80%;
+    width: auto;
 }
 .item:hover{
     transform: scale(1.05);
