--- a/src/components/Popular/Popular.css
+++ b/src/components/Popular/Popular.css
@@ -1,16 +1,16 @@
 .popular{
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    height: 90vh; 
+    height: 100%; 
     justify-content: space-around;
 }
 .popular-item{
     display: flex;
     flex-wrap: wrap;
     width: 60%;
-    justify-content: space-between;
     margin-top: 50px;
     gap: 30px;
 }
