--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -4,10 +4,12 @@
     align-items: center;
     justify-content: center;
     gap: 50px;
+    padding-top: 10px;
 }
 
 .footer-logo {
     display: flex;
+    text-decoration: none;
     align-items: center;
     gap: 20px;
 }
