--- a/src/components/product_display/ProductDisplay.css
+++ b/src/components/product_display/ProductDisplay.css
@@ -20,18 +20,17 @@
 }
 
 .product-display-img-list{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
   padding: 10px;
   gap: 5px;
   margin-top: 10px;
-  border: 1px solid #cfcfcf;
+
 }
-.product-display-img-list img{
-    width: 150px;
-}
+
 .product-display-main-img{
-    width: 300px;
+    width: 700px;
 }
 .product-display-right{
     margin: 0px 60px;
