--- a/src/pages/css/Motor.css
+++ b/src/pages/css/Motor.css
@@ -4,21 +4,6 @@
     width: 100%;
     height: 469px;
 }
-.motorcategory-indexSort{
-    display: flex;
-    margin: 0 170px;
-    justify-content: space-between;
-    align-items: center;
-}
-.motorcategory-sort{
-    margin-top: 10px;
-    padding: 5px 20px;
-    border-radius: 40px;
-    border: 1px solid #888;
-}
-.motorcategory-indexSort p span{
-    font-weight: 600;
-}
 .motorcategory-products {
     display: grid;
     justify-content: center;
@@ -27,16 +12,22 @@
     margin: 0 170px;
     padding: 30px 85px;
 }
-.motor-category-loadmore{
+
+.motocategory-category-title{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 150px auto;
-    width: 200px;
-    height: 49px;
-    border-radius: 75px;
-    background: #ededed;
-    color: #787878;
-    font-size: 18px;
-    font-weight: 500;
+}
+.motocategory-category-title hr{
+    width: 20%;
+    border: none;
+    border-radius: 10px;
+    height: 5px;
+    background: #FED444;
+}
+.motorcategory-pagination{
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
 }
