--- a/src/pages/css/Contact.css
+++ b/src/pages/css/Contact.css
@@ -16,3 +16,37 @@
     width: 100%;
     height: 469px;
 }
+.contact-container{
+    padding-top: 50px;
+    display: flex;
+    justify-content: center;
+    gap: 80px;
+}
+.contact-left{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.contact-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: sans-serif;
+    gap: 20px;
+    
+}
+.contact-content p{
+        max-width: 480px;
+}
+.contact-content p a{
+    text-decoration: none;
+    color: #3409df;
+}
+.contact-forn{
+    padding-top: 50px;
+}
+
+.contact-right img{
+    width: 700px;
+    height: 500px;
+}
