--- a/src/components/relatedproduct/RelatedProduct.css
+++ b/src/components/relatedproduct/RelatedProduct.css
@@ -24,3 +24,8 @@
     width: 70%;
     gap: 20px;
 }
+.relatedproduct-pagination{
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+}
