--- a/src/components/Popular/Popular.css
+++ b/src/components/Popular/Popular.css
@@ -13,11 +13,11 @@
     align-items: center;
     flex-wrap: wrap;
     width: 70%;
-    margin-top: 50px;
     gap: 30px;
     padding: 30px 0 30px 0;
 }
 .popular h1{
+    padding-top: 30px;
     counter-reset: #171717;
     font-size: 50px;
     font-weight: 600;
@@ -27,4 +27,11 @@
     height: 6px;
     border-radius: 10px;
     background: #252525;
+}
+@media (max-width: 1024px) {
+    .popular h1{
+        counter-reset: #171717;
+        font-size: 24px;
+        font-weight: 600;
+    }
 }
