--- a/src/components/Popular/Popular.css
+++ b/src/components/Popular/Popular.css
@@ -8,13 +8,11 @@
     justify-content: space-around;
 }
 .popular-item{
-    display: flex;
+    display: grid;
     justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 70%;
-    gap: 30px;
-    padding: 30px 0 30px 0;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 80px;
+    padding: 30px 85px;
 }
 .popular h1{
     padding-top: 30px;
@@ -33,5 +31,13 @@
         counter-reset: #171717;
         font-size: 24px;
         font-weight: 600;
+    }
+    .popular-item{
+        display: grid;
+        justify-content: center;
+        grid-template-columns: 1fr 1fr;
+        padding: 30px 85px;
+        margin: 0 170px;
+        grid-gap: 15px;
     }
 }
