--- a/src/components/breadcrums/Breadcrum.css
+++ b/src/components/breadcrums/Breadcrum.css
@@ -15,3 +15,10 @@
 .breadcrum a:hover{
     color: #aeaeae;
 }
+@media (max-width: 1024px) {
+    .breadcrum{
+        margin: 5px 10px;
+        text-transform: capitalize;
+        font-size: 12px;
+    }
+}
