--- a/src/components/product_display/ProductDisplay.css
+++ b/src/components/product_display/ProductDisplay.css
@@ -14,13 +14,16 @@
 }
 
 .product-display-img-list {
+    height: 150px;
+    width: fit-content;
     display: flex;
+    justify-content: center;
     flex-wrap: nowrap;
     align-items: center;
     padding: 10px;
     gap: 5px;
     margin-top: 10px;
-
+    cursor: pointer;
 }
 
 .product-display-right {
@@ -75,8 +78,8 @@
 
 .img-list-switch {
     width: 180px;
+    height: 120px;
 }
-
 
 
 @media (max-width: 1024px) {
@@ -90,13 +93,14 @@
     }
 
     .product-display-img {
-        width: 300px;
+        width: 350px;
         height: 250px;
     }
 
     .img-list-switch {
         width: 100px;
-        height: 80px;
+        height: 100px;
+        overflow: hidden;
     }
 
     .product-display-img-list {
@@ -106,7 +110,6 @@
         padding: 10px;
         gap: 5px;
         margin-top: 10px;
-
     }
 
     .product-display-right {
@@ -114,8 +117,6 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        padding-top: 60px;
-
     }
 
     .product-display-right h1 {
