change componet, page to using resful api to gen data

--- a/src/components/item_related/ItemRelated.css
+++ b/src/components/item_related/ItemRelated.css
@@ -46,6 +46,15 @@
     padding: 0px 10px 10px;
     cursor: pointer;
 }
+.relateditem_odo {
+    white-space: wrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 16px;
+    font-weight: 500;
+    box-sizing: border-box;
+    padding: 0px 10px 2px;
+}
 
 .relateditem_name:hover {
     color: #FED251;
