update animetion, transition

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -37,11 +37,22 @@
 .footer-links a {
     color: #171717;
     text-decoration: none;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    overflow: hidden;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.5s;
+    -webkit-transition-property: color, background-color;
+    transition-property: color, background-color;
 }
-
-.footer-links a:hover {
+.footer-links a:hover, .footer-links a:focus, .footer-links a:active {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
     color: #1677ff;
-}
+  }
+
 
 .footer-social-icon {
     display: flex;
@@ -50,12 +61,17 @@
     cursor: pointer;
 }
 
+
 .footer-icon-container {
     padding: 10px;
     padding-bottom: 10px;
     border: none;
 }
-
+.footer-icon-container:hover, .footer-icon-container:focus, .footer-icon-container:active {
+    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
 .copy-right {
     display: flex;
     flex-direction: column;
