--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -39,12 +39,16 @@
     height: 70px;
     border-radius: 70px;
     margin-top: 30px;
-    background: #ff4141;
     color: white;
     font-size: 22px;
     font-weight: 500;
     text-decoration: none;
 }
+.hero-latest-btn:hover, .hero-latest-btn:focus, .hero-latest-btn:active {
+    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
 .hero-right{
     flex: 1;
     display: flex;
