--- a/src/components/loading/LoadingPage.css
+++ b/src/components/loading/LoadingPage.css
@@ -1,84 +1,38 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/* HTML: <div class="loader"></div> */
+.body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 60vh;
+}
+.loader {
+  width: 380px;
+  height: 32px;
+  border-radius: 20px;
+  color: #514b82;
+  border: 2px solid;
+  position: relative;
+}
+.loader::before {
+  content: "";
+  position: absolute;
+  margin: 2px;
+  inset: 0 100% 0 0;
+  border-radius: inherit;
+  background: currentColor;
+  animation: l6 0.65s infinite;
+}
+@keyframes l6 {
+    100% {inset:0}
+}
+
+@media (max-width: 1024px) {
+  .body{
+    height: 30vh;
   }
-  
-  .body {
-    width: 100%;
-    height: 70vh;
-    background-color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
   .loader {
-    display: grid;
-    grid-template-columns: repeat(3, 50px);
-    grid-template-rows: repeat(3, 50px);
-    gap: 5px;
-    transform: rotate(45deg);
+    width: 180px;
+    height: 28px;
   }
-  
-  .loader span {
-    background-color: #fff;
-    border-radius: 8px;
-    animation: loading 1.5s infinite;
-  }
-  
-  @keyframes loading {
-    0%, 100% {
-      opacity: 0;
-      transform: scale(0);
-    }
-  
-    35%, 65% {
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
-  
-  /* 1~3 */
-  .loader span:nth-child(-n+3) {
-    background-color: #4bc8eb;
-  }
-  
-  /* 4~6 */
-  .loader span:nth-child(n+4):nth-child(-n+6) {
-    background-color: #f13a8f;
-  }
-  
-  /* 7~9 */
-  .loader span:nth-child(n+7):nth-child(-n+9) {
-    background-color: #36f372;
-  }
-  
-  .loader span:nth-child(7) {
-    animation-delay: 0.1s;
-  }
-  
-  /* 第二列 */
-  .loader span:nth-child(4), 
-  .loader span:nth-child(8) {
-    animation-delay: 0.2s;
-  }
-  
-  /* 第三列 */
-  .loader span:nth-child(1), 
-  .loader span:nth-child(5), 
-  .loader span:nth-child(9) {
-    animation-delay: 0.3s;
-  }
-  
-  /* 第四列 */
-  .loader span:nth-child(2), 
-  .loader span:nth-child(6) {
-    animation-delay: 0.4s;
-  }
-  
-  /* 第五列 */
-  .loader span:nth-child(3) {
-    animation-delay: 0.5s;
-  }
-  
+}
